--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header class="header">
-        <h1>Cherry!!</h1>
+        <img src="Logos/BlessedCherries.mov" alt="Cherry Header GIF">
         <div class="buttons-container">
             <a href="games.html" class="tbd-button">
             <img src="Logos/games.png" alt="Games">
