--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML5>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -35,13 +35,13 @@
     </div>
 
     <footer class="footer">
-        <a href="https://twitter.com" class="social-button">
+        <a href="https://twitter.com" target="_blank" class="social-button">
             <img src="Logos/X-Logo.png" alt="Twitter Logo">
         </a>
-        <a href="https://discord.gg/h9qFTEvUBe" class="social-button">
+        <a href="https://discord.gg/h9qFTEvUBe" target="_blank" class="social-button">
             <img src="Logos/Discord-Logo.png" alt="Discord Logo">
         </a>
-        <a href="https://www.instagram.com/ubergdooper" class="social-button">
+        <a href="https://www.instagram.com/ubergdooper" target="_blank" class="social-button">
             <img src="Logos/Instagram-Logo-2.png" alt="Instagram Logo">
         </a>
     </footer>
