--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header class="header">
-        <img src="https://github.com/IncognitoCherry/Cherry/blob/b93c4a3946c7e0276083529134b2c50392971c38/Logos/BlessedCherries.gif" alt="Cherry Header GIF">
+        <img src="Logos/BlessedCherries.gif" alt="Cherry Header GIF">
         <div class="buttons-container">
             <a href="games.html" class="tbd-button">
             <img src="Logos/games.png" alt="Games">
