--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header class="header">
-        <img src="Logos/BlessedCherries.gif" type="image/gif" 
+        <img src="Logos/BlessedCherries.mov" type="image/mov" 
         <div class="buttons-container">
             <a href="games.html" class="tbd-button">
             <img src="Logos/games.png" alt="Games">
