--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header class="header">
-        <div class="headergif">
+        <div class="gif">
         <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExcmNlY2RuYmM4aGZyNjcxdjVvaHg1Yms2cjE4bWNkM2R3dG9ubDloYSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/GbwWtqaEP6rTq9e2mM/giphy.gif" alt="BD Gif">  
         </div>
         <div class="buttons-container">
