--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 
 <body>
     <header class="header">
-        <a> href="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExcmNlY2RuYmM4aGZyNjcxdjVvaHg1Yms2cjE4bWNkM2R3dG9ubDloYSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/GbwWtqaEP6rTq9e2mM/giphy.gif" class="gif" alt="BD Gif"  
-        </a>
+        <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExcmNlY2RuYmM4aGZyNjcxdjVvaHg1Yms2cjE4bWNkM2R3dG9ubDloYSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/GbwWtqaEP6rTq9e2mM/giphy.gif" alt="BD Gif">
         <div class="buttons-container">
             <a href="games.html" class="tbd-button">
             <img src="Logos/games.png" alt="Games">
