--- a/index.html
+++ b/index.html
@@ -10,19 +10,16 @@
 
 <body>
     <header class="header">
-        <div class="gif-container">
-        <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExcmNlY2RuYmM4aGZyNjcxdjVvaHg1Yms2cjE4bWNkM2R3dG9ubDloYSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/GbwWtqaEP6rTq9e2mM/giphy.gif" alt="BD Gif">
-        </div>
-        <div class="buttons-container">
-            <a href="games.html" class="tbd-button">
-            <img src="Logos/games.png" alt="Games">
-            </a>
-            <a href="#" class="tbd-button">TBD</a>
-            <a href="#" class="tbd-button">TBD</a>
-            <a href="#" class="tbd-button">TBD</a>
-            <a href="#" class="tbd-button">TBD</a>
-            <a href="#" class="tbd-button">TBD</a>
-        </div>
+<div class="gif-container">
+            <img src="your-gif.gif" alt="Your GIF">
+            <a href="games.html" class="tbd-button"> Button 1 <img src="Logos/games.png" alt="Games"> </a>
+            <a href="page2.html" class="tbd-button"> Button 2</a>
+            <a href="page3.html" class="tbd-button"> Button 3</a>
+            <a href="page4.html" class="tbd-button"> Button 4</a>
+            <a href="page5.html" class="tbd-button"> Button 5</a>
+            <a href="page6.html" class="tbd-button"> Button 6</a>
+</div>
+        
     </header>
 
     <div class="container">
