--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Cherry</title>
     <link rel="icon" href="Logos/Instagram-Logo.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
+    <style> 
+        #myHeader {
+            background-image: url('https://media.giphy.com/media/GbwWtqaEP6rTq9e2mM/giphy.gif');
+            background-size: cover;
+            height: 100px;
+    </style>
 </head>
 
 <body>
