--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style> 
         #myHeader {
             background-image: url('https://media.giphy.com/media/GbwWtqaEP6rTq9e2mM/giphy.gif');
-            background-size: cover;
+            background-size: contain;
             height: 300px;
     </style>
 </head>
