--- a/index.html
+++ b/index.html
@@ -8,9 +8,16 @@
     <link rel="stylesheet" href="styles.css">
     <style> 
         #myHeader {
+            position: absolute;
             background-image: url('https://media.giphy.com/media/GbwWtqaEP6rTq9e2mM/giphy.gif');
             background-size: contain;
             height: 300px;
+
+            .header-content {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            }
     </style>
 </head>
 
