--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
     top: 100px;
     left: 100px;
 }
+            .buttons-container {
+    position: absolute;
+    bottom: 10px;
+    left: 0;
+    width: 100%;
+    text-align: center;
+}
 
     </style>
 </head>
