--- a/Subpages/games.html
+++ b/Subpages/games.html
@@ -39,13 +39,13 @@
     <footer class="footer">
         <nav>
             <a href="https://twitter.com" class="social-button">
-                <img src="Logos/X-Logo.png" alt="Twitter Logo">
+                <img src=".../Logos/X-Logo.png" alt="Twitter Logo">
             </a>
             <a href="https://discord.gg/h9qFTEvUBe" class="social-button">
-                <img src="Logos/Discord-Logo.png" alt="Discord Logo">
+                <img src=".../Logos/Discord-Logo.png" alt="Discord Logo">
             </a>
             <a href="https://www.instagram.com/ubergdooper" class="social-button">
-                <img src="Logos/Instagram-Logo-2.png" alt="Instagram Logo">
+                <img src=".../Logos/Instagram-Logo-2.png" alt="Instagram Logo">
             </a>
         </nav>
     </footer>
