--- a/Subpages/Slope.html
+++ b/Subpages/Slope.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cherry</title>
-    <link rel="icon" href="Logos/Instagram-Logo.png" type="image/png">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="../Logos/Instagram-Logo.png" type="image/png">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
     <header class="header">
-        <h1>Cherry!!</h1>
+        <h1>Cherry|Slope</h1>
         <div class="buttons-container">
             <a href="games.html" class="tbd-button">
-                <img src="Logos/games.png" alt="Games">
+                <img src="../Logos/games.png" alt="Games">
             </a>
             <a href="#" class="tbd-button">TBD</a>
             <a href="#" class="tbd-button">TBD</a>
@@ -30,13 +30,13 @@
 
     <footer class="footer">
         <a href="https://twitter.com" class="social-button">
-            <img src=".../Logos/X-Logo.png" alt="Twitter Logo">
+            <img src="../Logos/X-Logo.png" alt="Twitter Logo">
         </a>
         <a href="https://discord.gg/h9qFTEvUBe" class="social-button">
             <img src="../Logos/Discord-Logo.png" alt="Discord Logo">
         </a>
         <a href="https://www.instagram.com/ubergdooper" class="social-button">
-            <img src=".../Logos/Instagram-Logo-2.png" alt="Instagram Logo">
+            <img src="../Logos/Instagram-Logo-2.png" alt="Instagram Logo">
         </a>
     </footer>
 
