--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cherry</title>
-    <link rel="icon" href="Logos/Instagram-Logo.png" type="image/png">
+    <title>Cherry|Lobby</title>
+    <link rel="icon" href="Logos/Cherry.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
     <style> 
         #myHeader {
