--- a/games.html
+++ b/games.html
@@ -7,16 +7,36 @@
     <title>Cherry</title>
     <link rel="icon" href="Logos/Instagram-Logo.png" type="image/Favicon">
     <link rel="stylesheet" href="styles.css">
+<style> 
+        #myHeader {
+            position: relative;
+            background-image: url('https://media.giphy.com/media/GbwWtqaEP6rTq9e2mM/giphy.gif');
+            background-size: contain;
+            height: 350px;
+
+            .header-content {
+    position: absolute;
+    top: 100px;
+    left: 100px;
+}
+            .buttons-container {
+    position: absolute;
+    bottom: 10px;
+    left: 0;
+    width: 100%;
+    text-align: center;
+}
+
+    </style>
 </head>
 
 <body>
-    <header class="header">
-        <h1>Blessed Cherries Games</h1>
+    <header id="myHeader">
         <div class="buttons-container">
+            <a href="index.html" class="tbd-button"> <img src="Logos/HouseIcon.png" alt="Home"> </a>
             <a href="games.html" class="tbd-button">
-                <img src="Logos/games.png" alt="Games">
+            <img src="Logos/GameIcon.png" alt="Games">
             </a>
-            <a href="#" class="tbd-button">TBD</a>
             <a href="#" class="tbd-button">TBD</a>
             <a href="#" class="tbd-button">TBD</a>
             <a href="#" class="tbd-button">TBD</a>
