--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <style> 
         #myHeader {
             position: relative;
+            padding: 100%;
             background-image: url('https://media.giphy.com/media/GbwWtqaEP6rTq9e2mM/giphy.gif');
             background-size: contain;
             height: 350px;
