--- a/games.html
+++ b/games.html
@@ -10,9 +10,10 @@
 <style> 
         #myHeader {
             position: relative;
+            padding: 25px;
             background-image: url('https://media.giphy.com/media/GbwWtqaEP6rTq9e2mM/giphy.gif');
             background-size: contain;
-            height: 350px;
+            height: 270px;
 
             .header-content {
     position: absolute;
