--- a/Subpages/Slope.html
+++ b/Subpages/Slope.html
@@ -4,19 +4,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cherry</title>
+    <title>Cherry|Slope</title>
     <link rel="icon" href="../Logos/Instagram-Logo.png" type="image/png">
     <link rel="stylesheet" href="../styles.css">
+<style> 
+        #myHeader {
+            position: relative;
+            padding: 25px;
+            background-image: url('https://media.giphy.com/media/GbwWtqaEP6rTq9e2mM/giphy.gif');
+            background-size: contain;
+            height: 270px;
+
+            .header-content {
+    position: absolute;
+    top: 100px;
+    left: 100px;
+}
+            .buttons-container {
+    position: absolute;
+    bottom: 10px;
+    left: 0;
+    width: 100%;
+    text-align: center;
+}
+
+    </style>
 </head>
 
 <body>
-    <header class="header">
-        <h1>Cherry|Slope</h1>
+    <header id="myHeader">
         <div class="buttons-container">
+            <a href="index.html" class="tbd-button"> <img src="Logos/HouseIcon.png" alt="Home"> </a>
             <a href="games.html" class="tbd-button">
-                <img src="../Logos/games.png" alt="Games">
+            <img src="Logos/GameIcon.png" alt="Games">
             </a>
-            <a href="#" class="tbd-button">TBD</a>
             <a href="#" class="tbd-button">TBD</a>
             <a href="#" class="tbd-button">TBD</a>
             <a href="#" class="tbd-button">TBD</a>
