--- a/Subpages/Slope.html
+++ b/Subpages/Slope.html
@@ -34,9 +34,9 @@
 <body>
     <header id="myHeader">
         <div class="buttons-container">
-            <a href="index.html" class="tbd-button"> <img src="Logos/HouseIcon.png" alt="Home"> </a>
+            <a href="index.html" class="tbd-button"> <img src="../Logos/HouseIcon.png" alt="Home"> </a>
             <a href="games.html" class="tbd-button">
-            <img src="Logos/GameIcon.png" alt="Games">
+            <img src="../Logos/GameIcon.png" alt="Games">
             </a>
             <a href="#" class="tbd-button">TBD</a>
             <a href="#" class="tbd-button">TBD</a>
