--- a/Subpages/Slope.html
+++ b/Subpages/Slope.html
@@ -34,8 +34,8 @@
 <body>
     <header id="myHeader">
         <div class="buttons-container">
-            <a href="index.html" class="tbd-button"> <img src="../Logos/HouseIcon.png" alt="Home"> </a>
-            <a href="games.html" class="tbd-button">
+            <a href="../index.html" class="tbd-button"> <img src="../Logos/HouseIcon.png" alt="Home"> </a>
+            <a href="../games.html" class="tbd-button">
             <img src="../Logos/GameIcon.png" alt="Games">
             </a>
             <a href="#" class="tbd-button">TBD</a>
